--- a/animals.html
+++ b/animals.html
@@ -54,58 +54,187 @@
   <h1>My Animal Repository</h1>
   <ul class="cards">
     <li class="cards__item">
-  <div class='card__title'>Australian Cattle Dog</div>
+  <div class='card__title'>American Foxhound</div>
   <div class='card__text'>
     <ul class='card__fields'>
       <li><strong>Diet:</strong> Omnivore</li>
-      <li><strong>Location:</strong> Oceania</li>
+      <li><strong>Location:</strong> North-America</li>
+      <li><strong>Type:</strong> Hound</li>
       <li><strong>Skin Type:</strong> Hair</li>
     </ul>
   </div>
 </li>
 <li class="cards__item">
-  <div class='card__title'>Banjo Catfish</div>
+  <div class='card__title'>Arctic Fox</div>
   <div class='card__text'>
     <ul class='card__fields'>
       <li><strong>Diet:</strong> Carnivore</li>
-      <li><strong>Location:</strong> South-America</li>
-      <li><strong>Skin Type:</strong> Unknown</li>
-    </ul>
-  </div>
-</li>
-<li class="cards__item">
-  <div class='card__title'>Blue Catfish</div>
-  <div class='card__text'>
-    <ul class='card__fields'>
-      <li><strong>Diet:</strong> Omnivore</li>
-      <li><strong>Location:</strong> Central-America, North-America</li>
-      <li><strong>Type:</strong> Fish</li>
-      <li><strong>Skin Type:</strong> Scales</li>
-    </ul>
-  </div>
-</li>
-<li class="cards__item">
-  <div class='card__title'>Bobcat</div>
-  <div class='card__text'>
-    <ul class='card__fields'>
-      <li><strong>Diet:</strong> Carnivore</li>
-      <li><strong>Location:</strong> Central-America, North-America</li>
+      <li><strong>Location:</strong> Eurasia, Europe, North-America</li>
+      <li><strong>Type:</strong> Mammal</li>
       <li><strong>Skin Type:</strong> Fur</li>
     </ul>
   </div>
 </li>
 <li class="cards__item">
-  <div class='card__title'>Cat-Eyed Snake</div>
+  <div class='card__title'>Cross Fox</div>
   <div class='card__text'>
     <ul class='card__fields'>
       <li><strong>Diet:</strong> Carnivore</li>
-      <li><strong>Location:</strong> Central-America, North-America, South-America</li>
+      <li><strong>Location:</strong> North-America</li>
+      <li><strong>Type:</strong> mammal</li>
+      <li><strong>Skin Type:</strong> Fur</li>
+    </ul>
+  </div>
+</li>
+<li class="cards__item">
+  <div class='card__title'>Darwin’s fox</div>
+  <div class='card__text'>
+    <ul class='card__fields'>
+      <li><strong>Diet:</strong> Omnivore</li>
+      <li><strong>Location:</strong> South-America</li>
+      <li><strong>Type:</strong> Mammal</li>
+      <li><strong>Skin Type:</strong> Fur</li>
+    </ul>
+  </div>
+</li>
+<li class="cards__item">
+  <div class='card__title'>English Foxhound</div>
+  <div class='card__text'>
+    <ul class='card__fields'>
+      <li><strong>Diet:</strong> Omnivore</li>
+      <li><strong>Location:</strong> Europe</li>
+      <li><strong>Skin Type:</strong> Hair</li>
+    </ul>
+  </div>
+</li>
+<li class="cards__item">
+  <div class='card__title'>Fennec Fox</div>
+  <div class='card__text'>
+    <ul class='card__fields'>
+      <li><strong>Diet:</strong> Omnivore</li>
+      <li><strong>Location:</strong> Africa, Asia</li>
+      <li><strong>Skin Type:</strong> Fur</li>
+    </ul>
+  </div>
+</li>
+<li class="cards__item">
+  <div class='card__title'>Fox</div>
+  <div class='card__text'>
+    <ul class='card__fields'>
+      <li><strong>Diet:</strong> Carnivore</li>
+      <li><strong>Location:</strong> Africa, Asia, Eurasia, Europe, North-America</li>
+      <li><strong>Type:</strong> Mammal</li>
+      <li><strong>Skin Type:</strong> Fur</li>
+    </ul>
+  </div>
+</li>
+<li class="cards__item">
+  <div class='card__title'>Fox Snakes</div>
+  <div class='card__text'>
+    <ul class='card__fields'>
+      <li><strong>Diet:</strong> Carnivore</li>
+      <li><strong>Location:</strong> North-America</li>
       <li><strong>Skin Type:</strong> Scales</li>
     </ul>
   </div>
 </li>
 <li class="cards__item">
-  <div class='card__title'>Catahoula Leopard</div>
+  <div class='card__title'>Fox Squirrel</div>
+  <div class='card__text'>
+    <ul class='card__fields'>
+      <li><strong>Diet:</strong> Omnivore</li>
+      <li><strong>Location:</strong> Central-America, North-America</li>
+      <li><strong>Type:</strong> rodent</li>
+      <li><strong>Skin Type:</strong> Fur</li>
+    </ul>
+  </div>
+</li>
+<li class="cards__item">
+  <div class='card__title'>Fox Terrier</div>
+  <div class='card__text'>
+    <ul class='card__fields'>
+      <li><strong>Diet:</strong> Omnivore</li>
+      <li><strong>Location:</strong> Europe</li>
+      <li><strong>Skin Type:</strong> Hair</li>
+    </ul>
+  </div>
+</li>
+<li class="cards__item">
+  <div class='card__title'>Golden-Crowned Flying Fox</div>
+  <div class='card__text'>
+    <ul class='card__fields'>
+      <li><strong>Diet:</strong> Herbivore</li>
+      <li><strong>Location:</strong> Asia</li>
+      <li><strong>Skin Type:</strong> Hair</li>
+    </ul>
+  </div>
+</li>
+<li class="cards__item">
+  <div class='card__title'>Gray Fox</div>
+  <div class='card__text'>
+    <ul class='card__fields'>
+      <li><strong>Diet:</strong> Omnivore</li>
+      <li><strong>Location:</strong> Central-America, North-America, South-America</li>
+      <li><strong>Type:</strong> Mammal</li>
+      <li><strong>Skin Type:</strong> Fur</li>
+    </ul>
+  </div>
+</li>
+<li class="cards__item">
+  <div class='card__title'>Kit Fox</div>
+  <div class='card__text'>
+    <ul class='card__fields'>
+      <li><strong>Diet:</strong> Omnivore</li>
+      <li><strong>Location:</strong> Central-America, North-America</li>
+      <li><strong>Type:</strong> mammal</li>
+      <li><strong>Skin Type:</strong> Fur</li>
+    </ul>
+  </div>
+</li>
+<li class="cards__item">
+  <div class='card__title'>Marble Fox</div>
+  <div class='card__text'>
+    <ul class='card__fields'>
+      <li><strong>Diet:</strong> Omnivore</li>
+      <li><strong>Location:</strong> North-America</li>
+      <li><strong>Type:</strong> Mammal</li>
+      <li><strong>Skin Type:</strong> Fur</li>
+    </ul>
+  </div>
+</li>
+<li class="cards__item">
+  <div class='card__title'>Red Fox</div>
+  <div class='card__text'>
+    <ul class='card__fields'>
+      <li><strong>Diet:</strong> Omnivore</li>
+      <li><strong>Location:</strong> Africa, Asia, Europe, North-America, Oceania</li>
+      <li><strong>Skin Type:</strong> Hair</li>
+    </ul>
+  </div>
+</li>
+<li class="cards__item">
+  <div class='card__title'>Smooth Fox Terrier</div>
+  <div class='card__text'>
+    <ul class='card__fields'>
+      <li><strong>Diet:</strong> Omnivore</li>
+      <li><strong>Location:</strong> Europe</li>
+      <li><strong>Skin Type:</strong> Hair</li>
+    </ul>
+  </div>
+</li>
+<li class="cards__item">
+  <div class='card__title'>Tibetan Fox</div>
+  <div class='card__text'>
+    <ul class='card__fields'>
+      <li><strong>Diet:</strong> Carnivore</li>
+      <li><strong>Location:</strong> Asia</li>
+      <li><strong>Type:</strong> Mammal</li>
+      <li><strong>Skin Type:</strong> Fur</li>
+    </ul>
+  </div>
+</li>
+<li class="cards__item">
+  <div class='card__title'>Toy Fox Terrier</div>
   <div class='card__text'>
     <ul class='card__fields'>
       <li><strong>Diet:</strong> Omnivore</li>
@@ -115,227 +244,12 @@
   </div>
 </li>
 <li class="cards__item">
-  <div class='card__title'>Catalan Sheepdog</div>
+  <div class='card__title'>Wire Fox Terrier</div>
   <div class='card__text'>
     <ul class='card__fields'>
       <li><strong>Diet:</strong> Omnivore</li>
       <li><strong>Location:</strong> Europe</li>
-      <li><strong>Skin Type:</strong> Unknown</li>
-    </ul>
-  </div>
-</li>
-<li class="cards__item">
-  <div class='card__title'>Caterpillar</div>
-  <div class='card__text'>
-    <ul class='card__fields'>
-      <li><strong>Diet:</strong> Herbivore</li>
-      <li><strong>Location:</strong> Africa, Asia, Central-America, Eurasia, Europe, North-America, Oceania, South-America</li>
       <li><strong>Skin Type:</strong> Hair</li>
-    </ul>
-  </div>
-</li>
-<li class="cards__item">
-  <div class='card__title'>Catfish</div>
-  <div class='card__text'>
-    <ul class='card__fields'>
-      <li><strong>Diet:</strong> Carnivore</li>
-      <li><strong>Location:</strong> Africa, Asia, Central-America, Eurasia, Europe, North-America, Ocean, Oceania, South-America</li>
-      <li><strong>Skin Type:</strong> Scales</li>
-    </ul>
-  </div>
-</li>
-<li class="cards__item">
-  <div class='card__title'>Corn Rex Cat (Cornish Rex)</div>
-  <div class='card__text'>
-    <ul class='card__fields'>
-      <li><strong>Diet:</strong> Omnivore</li>
-      <li><strong>Location:</strong> Europe</li>
-      <li><strong>Skin Type:</strong> Unknown</li>
-    </ul>
-  </div>
-</li>
-<li class="cards__item">
-  <div class='card__title'>Electric Catfish</div>
-  <div class='card__text'>
-    <ul class='card__fields'>
-      <li><strong>Diet:</strong> Carnivore</li>
-      <li><strong>Location:</strong> Africa</li>
-      <li><strong>Type:</strong> Ray-finned fish</li>
-      <li><strong>Skin Type:</strong> Skin</li>
-    </ul>
-  </div>
-</li>
-<li class="cards__item">
-  <div class='card__title'>European Polecat</div>
-  <div class='card__text'>
-    <ul class='card__fields'>
-      <li><strong>Diet:</strong> Carnivore</li>
-      <li><strong>Location:</strong> Africa, Eurasia, Europe</li>
-      <li><strong>Type:</strong> Mustelid</li>
-      <li><strong>Skin Type:</strong> Fur</li>
-    </ul>
-  </div>
-</li>
-<li class="cards__item">
-  <div class='card__title'>European Wildcat</div>
-  <div class='card__text'>
-    <ul class='card__fields'>
-      <li><strong>Diet:</strong> Omnivore</li>
-      <li><strong>Location:</strong> Europe</li>
-      <li><strong>Skin Type:</strong> Unknown</li>
-    </ul>
-  </div>
-</li>
-<li class="cards__item">
-  <div class='card__title'>Fisher Cat</div>
-  <div class='card__text'>
-    <ul class='card__fields'>
-      <li><strong>Diet:</strong> Omnivore</li>
-      <li><strong>Location:</strong> North-America</li>
-      <li><strong>Type:</strong> Mammal</li>
-      <li><strong>Skin Type:</strong> Fur</li>
-    </ul>
-  </div>
-</li>
-<li class="cards__item">
-  <div class='card__title'>Fishing Cat</div>
-  <div class='card__text'>
-    <ul class='card__fields'>
-      <li><strong>Diet:</strong> Carnivore</li>
-      <li><strong>Location:</strong> Asia</li>
-      <li><strong>Skin Type:</strong> Fur</li>
-    </ul>
-  </div>
-</li>
-<li class="cards__item">
-  <div class='card__title'>Ghost Catfish</div>
-  <div class='card__text'>
-    <ul class='card__fields'>
-      <li><strong>Diet:</strong> Carnivore</li>
-      <li><strong>Location:</strong> Asia</li>
-      <li><strong>Type:</strong> Siluriformes</li>
-      <li><strong>Skin Type:</strong> Scales</li>
-    </ul>
-  </div>
-</li>
-<li class="cards__item">
-  <div class='card__title'>Great Crested Flycatcher</div>
-  <div class='card__text'>
-    <ul class='card__fields'>
-      <li><strong>Diet:</strong> Omnivore</li>
-      <li><strong>Location:</strong> Central-America, North-America, South-America</li>
-      <li><strong>Type:</strong> Bird</li>
-      <li><strong>Skin Type:</strong> Unknown</li>
-    </ul>
-  </div>
-</li>
-<li class="cards__item">
-  <div class='card__title'>Hardhead Catfish</div>
-  <div class='card__text'>
-    <ul class='card__fields'>
-      <li><strong>Diet:</strong> Omnivore</li>
-      <li><strong>Location:</strong> Ocean</li>
-      <li><strong>Type:</strong> ray-finned fish</li>
-      <li><strong>Skin Type:</strong> Skin</li>
-    </ul>
-  </div>
-</li>
-<li class="cards__item">
-  <div class='card__title'>Highland Cattle</div>
-  <div class='card__text'>
-    <ul class='card__fields'>
-      <li><strong>Diet:</strong> Herbivore</li>
-      <li><strong>Location:</strong> Europe, North-America, Oceania</li>
-      <li><strong>Type:</strong> Mammal</li>
-      <li><strong>Skin Type:</strong> Hair</li>
-    </ul>
-  </div>
-</li>
-<li class="cards__item">
-  <div class='card__title'>Jaguarundi Cat</div>
-  <div class='card__text'>
-    <ul class='card__fields'>
-      <li><strong>Diet:</strong> Carnivore</li>
-      <li><strong>Location:</strong> Central-America, South-America</li>
-      <li><strong>Type:</strong> Mammal</li>
-      <li><strong>Skin Type:</strong> Hair</li>
-    </ul>
-  </div>
-</li>
-<li class="cards__item">
-  <div class='card__title'>Leopard Cat</div>
-  <div class='card__text'>
-    <ul class='card__fields'>
-      <li><strong>Diet:</strong> Carnivore</li>
-      <li><strong>Location:</strong> Asia</li>
-      <li><strong>Type:</strong> Mammal</li>
-      <li><strong>Skin Type:</strong> Fur</li>
-    </ul>
-  </div>
-</li>
-<li class="cards__item">
-  <div class='card__title'>Mekong Giant Catfish</div>
-  <div class='card__text'>
-    <ul class='card__fields'>
-      <li><strong>Diet:</strong> Herbivore</li>
-      <li><strong>Location:</strong> Asia</li>
-      <li><strong>Type:</strong>  Ray-finned fish</li>
-      <li><strong>Skin Type:</strong> Skin</li>
-    </ul>
-  </div>
-</li>
-<li class="cards__item">
-  <div class='card__title'>Polecat</div>
-  <div class='card__text'>
-    <ul class='card__fields'>
-      <li><strong>Diet:</strong> Carnivore</li>
-      <li><strong>Location:</strong> Africa, Asia, Europe, North-America</li>
-      <li><strong>Type:</strong> Mammal</li>
-      <li><strong>Skin Type:</strong> Hair</li>
-    </ul>
-  </div>
-</li>
-<li class="cards__item">
-  <div class='card__title'>Redtail Catfish</div>
-  <div class='card__text'>
-    <ul class='card__fields'>
-      <li><strong>Diet:</strong> Carnivore</li>
-      <li><strong>Location:</strong> South-America</li>
-      <li><strong>Type:</strong> Fish</li>
-      <li><strong>Skin Type:</strong> Scales</li>
-    </ul>
-  </div>
-</li>
-<li class="cards__item">
-  <div class='card__title'>Sulcata Tortoise</div>
-  <div class='card__text'>
-    <ul class='card__fields'>
-      <li><strong>Diet:</strong> Herbivore</li>
-      <li><strong>Location:</strong> Africa</li>
-      <li><strong>Type:</strong> Reptile</li>
-      <li><strong>Skin Type:</strong> Hard Shell</li>
-    </ul>
-  </div>
-</li>
-<li class="cards__item">
-  <div class='card__title'>Walking Catfish</div>
-  <div class='card__text'>
-    <ul class='card__fields'>
-      <li><strong>Diet:</strong> Omnivore</li>
-      <li><strong>Location:</strong> Asia</li>
-      <li><strong>Type:</strong> Fish</li>
-      <li><strong>Skin Type:</strong> Skin</li>
-    </ul>
-  </div>
-</li>
-<li class="cards__item">
-  <div class='card__title'>Wels Catfish</div>
-  <div class='card__text'>
-    <ul class='card__fields'>
-      <li><strong>Diet:</strong> Omnivore</li>
-      <li><strong>Location:</strong> Europe</li>
-      <li><strong>Type:</strong> ray-finned fish</li>
-      <li><strong>Skin Type:</strong> Unknown</li>
     </ul>
   </div>
 </li>
